# HermesLLM

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: README.md  cd.yaml  ci.yaml
atlas/: __init__.py  config.py
atlas/collectors/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py  text_upload.py  youtube.py
atlas/core/: chunks.py  cleaned_documents.py  datasets.py  documents.py  prompts.py  queries.py
atlas/storage/: database.py  vector_store.py
atlas/utils/: __init__.py
configs/: data_collection.yaml
core/: cleaned_documents.py
docs/: CI_CD.md  MONITORING.md  PART_16_SUMMARY.md
examples/: advanced_rag_example.py  advanced_text_processing_example.py  advanced_training_example.py  ci_cd_examples.sh  cli_tools_usage.py  evaluation_example.py  generate_datasets_example.py  model_singletons_example.py  monitoring_examples.py  sagemaker_deployment_example.py  settings_examples.py  zenml_pipelines_example.py
hermes/: README.md  config.py
hermes/api/: __init__.py  app.py  schemas.py
hermes/api/routes/: __init__.py  collection.py  health.py  processing.py  rag.py
hermes/cli/: __init__.py  commands.py
hermes/collectors/: __init__.py  base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py  text_upload.py  youtube.py
hermes/core/: __init__.py  base.py  datasets.py  embeddings.py  enums.py  exceptions.py  prompts.py  queries.py
hermes/datasets/: __init__.py  constants.py  generators.py  output_parsers.py  utils.py
hermes/deployment/: __init__.py  config.py  deployer.py  inference.py  packaging.py
hermes/evaluation/: README.md  __init__.py  benchmarks.py  evaluator.py  g_eval.py  metrics.py
hermes/inference/: __init__.py  predictor.py
hermes/infrastructure/: __init__.py  autoscaling.py  aws_roles.py  endpoint_manager.py
hermes/monitoring/: __init__.py  comet_tracker.py  decorators.py  opik_utils.py
hermes/pipelines/: __init__.py  base.py  collection.py  processing.py
hermes/processing/: QUICK_REFERENCE.md  __init__.py  base.py  chunk_utils.py  chunkers.py  cleaners.py  dispatcher.py  embedders.py  text_splitters.py
hermes/rag/: ADVANCED_FEATURES.md  __init__.py  pipeline.py  query_expander.py  reranker.py  retriever.py  self_query.py
hermes/settings/: __init__.py  zenml_integration.py
hermes/storage/: __init__.py  vector_store.py  warehouse.py
hermes/tools/: __init__.py  data_warehouse.py  ml_service.py  rag_demo.py  run.py  settings_manager.py
hermes/training/: __init__.py  dataset_builder.py  trainer.py
hermes/training/advanced/: __init__.py  config.py  dpo_trainer.py  model_loader.py  sft_trainer.py
hermes/utils/: export_import.py  file_io.py  helpers.py  logging.py  validators.py
hermes/zenml_pipelines/: __init__.py  artifact_export.py  collection_pipeline.py  dataset_pipeline.py  end_to_end_pipeline.py  evaluation_pipeline.py  pipeline_utils.py  processing_pipeline.py  training_pipeline.py
hermes/zenml_steps/: __init__.py  collection_steps.py  dataset_steps.py  evaluation_steps.py  export_steps.py  processing_steps.py  training_steps.py
storage/: database.py  files.py
tasks/: __init__.py
tasks/deployment/: __init__.py  deploy_endpoint.py  package_model.py  test_endpoint.py  upload_to_s3.py
tasks/evaluation/: __init__.py  steps.py
tasks/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_cleaned_documents.py
tasks/training/: __init__.py  load_dataset.py  push_model.py  train_dpo.py  train_sft.py
tests/: __init__.py  conftest.py  fixtures.py  utils.py
tests/integration/: test_example.py  test_pipelines.py
tests/unit/: test_example.py  test_models.py  test_processing.py  test_storage.py  test_utils.py
workflows/: __init__.py
workflows/pipelines/: __init__.py  deployment.py  evaluation.py  generate_datasets.py  training.py
