[tool.poetry]
name = "hermesllm"
version = "1.0.0"
description = "Production-ready LLM system with RAG, training, and deployment capabilities"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hermes"}]

[tool.poetry.dependencies]
python = "~3.11"

# Core ML & Orchestration
zenml = { version = "0.74.0", extras = ["server"] }
torch = "2.2.2"
numpy = "^1.26.4"
datasets = "^3.0.1"

# CLI & Utilities
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

# Data Collection
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"
youtube-transcript-api = "^0.6.2"

# Storage
pymongo = "^4.6.2"
qdrant-client = "^1.8.0"

# NLP & Embeddings
langchain = "^0.2.11"
langchain-openai = "^0.1.3"
langchain-community = "^0.2.11"
sentence-transformers = "^3.0.0"
tiktoken = "^0.7.0"

# API & Services
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"

# Monitoring & Tracking
opik = "^0.2.2"

# Utils
fake-useragent = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.cloud.dependencies]
sagemaker = ">=2.232.2"
s3fs = ">2022.3.0"
aws-profile-manager = "^0.7.3"
kubernetes = "^30.1.0"
sagemaker-huggingface-inference-toolkit = "^2.4.0"

[tool.poetry.scripts]
hermes = "hermes.cli:cli"
hermes-run = "hermes.tools.run:cli"
hermes-warehouse = "hermes.tools.data_warehouse:cli"
hermes-rag = "hermes.tools.rag_demo:cli"
hermes-serve = "hermes.tools.ml_service:main"
hermes-settings = "hermes.tools.settings_manager:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=hermes --cov-report=term-missing"
