[tool.poetry]
name = "hermesllm"
version = "1.0.0"
description = "Production-ready LLM system with RAG, training, and deployment capabilities"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hermes"}]

[tool.poetry.dependencies]
python = "~3.11"

# Core ML & Orchestration
zenml = { version = "0.74.0", extras = ["server"] }
torch = "2.2.2"
numpy = "^1.26.4"
datasets = "^3.0.1"

# CLI & Utilities
click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

# Data Collection
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"
youtube-transcript-api = "^0.6.2"

# Storage
pymongo = "^4.6.2"
qdrant-client = "^1.8.0"

# NLP & Embeddings
langchain = "^0.2.11"
langchain-openai = "^0.1.3"
langchain-community = "^0.2.11"
sentence-transformers = "^3.0.0"
tiktoken = "^0.7.0"

# API & Services
fastapi = ">=0.100,<=0.110"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"

# Monitoring & Tracking
opik = "^0.2.2"

# Utils
fake-useragent = "^1.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.cloud.dependencies]
sagemaker = ">=2.232.2"
s3fs = ">2022.3.0"
aws-profile-manager = "^0.7.3"
kubernetes = "^30.1.0"
sagemaker-huggingface-inference-toolkit = "^2.4.0"

[tool.poetry.scripts]
hermes = "hermes.cli:cli"
hermes-run = "hermes.tools.run:cli"
hermes-warehouse = "hermes.tools.data_warehouse:cli"
hermes-rag = "hermes.tools.rag_demo:cli"
hermes-serve = "hermes.tools.ml_service:main"
hermes-settings = "hermes.tools.settings_manager:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=hermes --cov-report=term-missing --cov-report=xml"

# Poe the Poet tasks
[tool.poe.tasks]
# QA Tasks
lint-check = "ruff check ."
lint-fix = "ruff check --fix ."
format-check = "ruff format --check ."
format-fix = "ruff format ."
gitleaks-check = "docker run -v .:/src zricethezav/gitleaks:latest dir /src"
lint-check-docker = "docker run --rm -i hadolint/hadolint < Dockerfile"

# Testing
test = "pytest tests/"
test-cov = "pytest tests/ --cov=hermes --cov-report=html"
test-verbose = "pytest tests/ -vv"

# Pipeline Execution
run-end-to-end = "python -m hermes.tools.run end-to-end"
run-collect = "python -m hermes.tools.run collect"
run-process = "python -m hermes.tools.run process"
run-generate-dataset = "python -m hermes.tools.run generate-dataset"
run-train = "python -m hermes.tools.run train"
run-evaluate = "python -m hermes.tools.run evaluate"

# Data Warehouse
export-data-warehouse = "python -m hermes.tools.data_warehouse export --format json"
import-data-warehouse = "python -m hermes.tools.data_warehouse import --format json"
list-collections = "python -m hermes.tools.data_warehouse list"
clear-collection = "python -m hermes.tools.data_warehouse clear"

# Settings Management
export-settings = "hermes-settings export-zenml"
import-settings = "hermes-settings import-zenml"
validate-settings = "hermes-settings validate"
show-settings = "hermes-settings show"

# Inference & RAG
run-inference-service = "uvicorn hermes.tools.ml_service:app --host 0.0.0.0 --port 8000 --reload"
call-rag = "hermes-rag query"
rag-demo = "hermes-rag demo"

# Infrastructure - Local
local-docker-up = "docker compose up -d"
local-docker-down = "docker compose down"
local-zenml-up = "zenml login --local"
local-zenml-down = "zenml logout --local"

[tool.poe.tasks.local-infrastructure-up]
sequence = [
    "local-docker-up",
    "local-zenml-up",
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.local-infrastructure-down]
sequence = [
    "local-docker-down",
    "local-zenml-down",
]
ignore_fail = "return_non_zero"

# Infrastructure - ZenML Stacks
[tool.poe.tasks.set-local-stack]
cmd = "zenml stack set default"

[tool.poe.tasks.set-aws-stack]
cmd = "zenml stack set aws-stack"

# Infrastructure - AWS SageMaker
[tool.poe.tasks.create-sagemaker-role]
shell = "python -m hermes.infrastructure.create_sagemaker_role"

[tool.poe.tasks.deploy-inference-endpoint]
shell = "python -m hermes.infrastructure.deploy_endpoint"

[tool.poe.tasks.delete-inference-endpoint]
shell = "python -m hermes.infrastructure.delete_endpoint"

# Docker Tasks
[tool.poe.tasks.build-docker]
cmd = "docker buildx build --platform linux/amd64 -t hermesllm -f Dockerfile ."

[tool.poe.tasks.run-docker-pipeline]
cmd = "docker run --rm --network host --shm-size=2g --env-file .env hermesllm poetry poe run-end-to-end"

[tool.poe.tasks.bash-docker]
cmd = "docker run --rm -it --network host --env-file .env hermesllm bash"

# Configuration Validation
[tool.poe.tasks.validate-configs]
script = "hermes.utils.validators:validate_all_configs"

# Documentation
[tool.poe.tasks.build-docs]
shell = "mkdocs build"

[tool.poe.tasks.serve-docs]
shell = "mkdocs serve"

# Pre-commit
[tool.poe.tasks.pre-commit-install]
cmd = "pre-commit install"

[tool.poe.tasks.pre-commit-run]
cmd = "pre-commit run --all-files"

# Clean Tasks
[tool.poe.tasks.clean]
sequence = [
    { cmd = "rm -rf dist/" },
    { cmd = "rm -rf .pytest_cache/" },
    { cmd = "rm -rf .ruff_cache/" },
    { cmd = "rm -rf htmlcov/" },
    { cmd = "rm -rf .coverage" },
    { cmd = "find . -type d -name __pycache__ -exec rm -rf {} + || true" },
]
ignore_fail = "return_non_zero"
